unpackaged/main/default/objects/Account/fields/Supplier_Categories__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Categories__c</fullName>
    <label>Supplier Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prenail</fullName>
            </value>
            <value>
                <fullName>Prenail Only</fullName>
            </value>
            <value>
                <fullName>PS1</fullName>
            </value>
            <value>
                <fullName>Roof</fullName>
            </value>
            <value>
                <fullName>External Joinery</fullName>
            </value>
            <value>
                <fullName>Insulation</fullName>
            </value>
            <value>
                <fullName>Interior Doors</fullName>
            </value>
            <value>
                <fullName>Reinforcing Steel</fullName>
            </value>
            <value>
                <fullName>Cladding</fullName>
            </value>
            <value>
                <fullName>Clever Living</fullName>
            </value>
            <value>
                <fullName>Stairs</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Internal Joinery</fullName>
            </value>
            <value>
                <fullName>Garage Door</fullName>
            </value>
            <value>
                <fullName>Structural Steel</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Door Hardware</fullName>
            </value>
            <value>
                <fullName>Farm Shed</fullName>
            </value>
            <value>
                <fullName>Mid Floor</fullName>
            </value>
            <value>
                <fullName>Miscellaneous / Other</fullName>
            </value>
            <value>
                <fullName>QS</fullName>
            </value>
            <value>
                <fullName>Kitchen / Laundry</fullName>
            </value>
            <value>
                <fullName>Fascia / Downpipes / Spouting</fullName>
            </value>
            <value>
                <fullName>Balustrade</fullName>
                <isActive>false</isActive>
                <label>Balustrade</label>
            </value>
            <value>
                <fullName>Benchtop</fullName>
                <isActive>false</isActive>
                <label>Benchtop</label>
            </value>
            <value>
                <fullName>Deck</fullName>
                <isActive>false</isActive>
                <label>Deck</label>
            </value>
            <value>
                <fullName>Downpipes</fullName>
                <isActive>false</isActive>
                <label>Downpipes</label>
            </value>
            <value>
                <fullName>Drainage</fullName>
                <isActive>false</isActive>
                <label>Drainage</label>
            </value>
            <value>
                <fullName>Electrical</fullName>
                <isActive>false</isActive>
                <label>Electrical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>