unpackaged/main/default/objects/Account/fields/Supplier_Region__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Region__c</fullName>
    <description>For NZ supplier accounts</description>
    <label>Supplier Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Supplier_Region</valueSetName>
    </valueSet>
</CustomField>