unpackaged/main/default/objects/Account/fields/Support_Provider__c.field-meta.xml
<CustomField>
    <fullName>Support_Provider__c</fullName>
    <label>Support Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>