unpackaged/main/default/objects/Account/fields/Temp_Comments__c.field-meta.xml
<CustomField>
    <fullName>Temp_Comments__c</fullName>
    <description>Pricing Assignment Temporary Comment field. All comments in PA screen saves here.</description>
    <label>Pricing Assignment Temp Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>