unpackaged/main/default/objects/Account/fields/Temporary_Business_Email__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Business_Email__c</fullName>
    <description>An temporary email used for onboarding call when there is no existing email for Account.</description>
    <label>Temporary Business Email</label>
    <type>Email</type>
</CustomField>