unpackaged/main/default/objects/Account/fields/Temporary_Umbrella_Group__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Umbrella_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Umbrella Group</description>
    <label>Temporary Umbrella Group</label>
    <referenceTo>Umbrella_Group__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>