unpackaged/main/default/objects/Account/fields/Temporary_Umbrella_Group_Association__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Umbrella_Group_Association__c</fullName>
    <description>A placeholder for the Associated Umbrella Group. This field is hidden and will be empty once the Umbrella Group Association Process is done.</description>
    <label>Temporary Umbrella Group Association</label>
    <length>255</length>
    <type>Text</type>
</CustomField>