unpackaged/main/default/objects/Account/fields/test11__c.field-meta.xml
<CustomField>
    <fullName>test11__c</fullName>
    <label>test11</label>
    <length>100</length>
    <type>Text</type>
</CustomField>