unpackaged/main/default/objects/Account/fields/Top_100__c.field-meta.xml
<CustomField>
    <fullName>Top_100__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this account is one of the Trade Specialists Top 100</description>
    <label>Top 100</label>
    <type>Checkbox</type>
</CustomField>