unpackaged/main/default/objects/Account/fields/Transacted_on_PowerPass_App__c.field-meta.xml
<CustomField>
    <fullName>Transacted_on_PowerPass_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transacted on PowerPass App</label>
    <type>Checkbox</type>
</CustomField>