unpackaged/main/default/objects/Account/fields/Transacted_on_PowerPass_App_Formula__c.field-meta.xml
<CustomField>
    <fullName>Transacted_on_PowerPass_App_Formula__c</fullName>
    <formula>IF( No_of_PowerPass_App_Transactions__c  &gt;= 1, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transacted on PowerPass App</label>
    <type>Checkbox</type>
</CustomField>