unpackaged/main/default/objects/Account/fields/Transfer_approval_status__c.field-meta.xml
<CustomField>
    <fullName>Transfer_approval_status__c</fullName>
    <label>Transfer approval status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Submitted for approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>