unpackaged/main/default/objects/Account/fields/Transfer_comments__c.field-meta.xml
<CustomField>
    <fullName>Transfer_comments__c</fullName>
    <label>Transfer comments</label>
    <type>TextArea</type>
</CustomField>