unpackaged/main/default/objects/Account/fields/Transfer_Initiator__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Initiator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who initiates account transfer</description>
    <label>Transfer Initiator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Transfer_Initiator</relationshipName>
    <type>Lookup</type>
</CustomField>