unpackaged/main/default/objects/Account/fields/Updated_Price_Lists__c.field-meta.xml
<CustomField>
    <fullName>Updated_Price_Lists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checked if the Price Lists under the Spendband for the accounts are updated</description>
    <label>Updated Price Lists</label>
    <type>Checkbox</type>
</CustomField>