unpackaged/main/default/objects/Account/fields/Verified_Email__c.field-meta.xml
<CustomField>
    <fullName>Verified_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified Email</label>
    <type>Checkbox</type>
</CustomField>