unpackaged/main/default/objects/Account/fields/YTD_GP__c.field-meta.xml
<CustomField>
    <fullName>YTD_GP__c</fullName>
    <label>YTD GP $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>