unpackaged/main/default/objects/Account/fields/YTD_Growth__c.field-meta.xml
<CustomField>
    <fullName>YTD_Growth__c</fullName>
    <formula>(YTD_Sales__c -  Last_YTD_Sales__c  )</formula>
    <label>YTD Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>