unpackaged/main/default/objects/Account/fields/YTD_Growth_Percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_Growth_Percentage__c</fullName>
    <formula>IF(OR(YTD_Growth__c =0,Last_YTD_Sales__c =0, ISBLANK(YTD_Growth__c), ISBLANK(Last_YTD_Sales__c)),0,YTD_Growth__c /  Last_YTD_Sales__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Growth %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>