unpackaged/main/default/objects/Account/fields/YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sales__c</fullName>
    <formula>BLANKVALUE(YTD_Sales_F_T__c, 0) +
BLANKVALUE(YTD_Sales_Stores__c, 0) +
BLANKVALUE(YTD_Sales_TC__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>