unpackaged/main/default/objects/Account/fields/YTD_Sales_F_T__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sales_F_T__c</fullName>
    <description>Aggregate Sales for Frame and Truss for this Financial Year. This data is set via integration</description>
    <label>YTD Sales - F&amp;T</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>