unpackaged/main/default/objects/Account/fields/YTD_Sales_Stores__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sales_Stores__c</fullName>
    <description>Aggregate Sales for Stores for this Financial Year. This data is set via integration</description>
    <label>YTD Sales - Stores</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>