unpackaged/main/default/objects/Account/fields/YTD_Sales_TC__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sales_TC__c</fullName>
    <description>Aggregate Sales for Trade Centers for this Financial Year. This data is set via integration</description>
    <label>YTD Sales - TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>