unpackaged/main/default/objects/Account/recordTypes/AU_Apprentice.recordType-meta.xml
<RecordType>
    <fullName>AU_Apprentice</fullName>
    <active>true</active>
    <description>Apprentice records</description>
    <label>AU Apprentice</label>
</RecordType>