unpackaged/main/default/objects/Account/recordTypes/AU_Customer.recordType-meta.xml
<RecordType>
    <fullName>AU_Customer</fullName>
    <active>true</active>
    <description>Australian customer accounts</description>
    <label>AU Customer</label>
</RecordType>