unpackaged/main/default/objects/Account/recordTypes/AU_Prospect.recordType-meta.xml
<RecordType>
    <fullName>AU_Prospect</fullName>
    <active>true</active>
    <description>Australian prospect accounts</description>
    <label>AU Prospect</label>
</RecordType>