unpackaged/main/default/objects/Account/recordTypes/AU_Supplier.recordType-meta.xml
<RecordType>
    <fullName>AU_Supplier</fullName>
    <active>true</active>
    <description>AU Supplier Accounts</description>
    <label>AU Supplier</label>
</RecordType>