unpackaged/main/default/objects/Account/recordTypes/NZ_Apprentice.recordType-meta.xml
<RecordType>
    <fullName>NZ_Apprentice</fullName>
    <active>true</active>
    <description>NZ Apprentice</description>
    <label>NZ Apprentice</label>
</RecordType>