unpackaged/main/default/objects/Account/recordTypes/NZ_Customer.recordType-meta.xml
<RecordType>
    <fullName>NZ_Customer</fullName>
    <active>true</active>
    <description>New Zealand Customer Account</description>
    <label>NZ Customer</label>
</RecordType>