unpackaged/main/default/objects/Account/recordTypes/NZ_Prospect.recordType-meta.xml
<RecordType>
    <fullName>NZ_Prospect</fullName>
    <active>true</active>
    <description>New Zealand prospect accounts</description>
    <label>NZ Prospect</label>
</RecordType>