unpackaged/main/default/objects/Account/recordTypes/NZ_Supplier.recordType-meta.xml
<RecordType>
    <fullName>NZ_Supplier</fullName>
    <active>true</active>
    <description>NZ Supplier Accounts</description>
    <label>NZ Supplier</label>
</RecordType>