unpackaged/main/default/objects/Account/validationRules/Account_Name_Validation_AU_Supplier.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Validation_AU_Supplier</fullName>
    <active>true</active>
    <description>To restrict all Profiles from editing the Account Name, except for System Admin</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &#39;AU_Supplier&#39;,
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c,
$Profile.Name))
)</errorConditionFormula>
    <errorMessage>You do not have rights to edit the Account Name.</errorMessage>
</ValidationRule>