unpackaged/main/default/objects/Account/validationRules/Account_Name_Validation_NZ_Supplier.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Validation_NZ_Supplier</fullName>
    <active>true</active>
    <description>To restrict NZ Profiles from editing the Account Name, except for NZ Quote Office</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &#39;NZ_Supplier&#39;,
$Profile.Name &lt;&gt; &#39;NZ Quote Office&#39;,
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c,
$Profile.Name))
)</errorConditionFormula>
    <errorMessage>You do not have rights to edit the Account Name.</errorMessage>
</ValidationRule>