unpackaged/main/default/objects/Account/validationRules/Cannot_edit_BAddress_unless_cash_account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_BAddress_unless_cash_account</fullName>
    <active>true</active>
    <description>Validation rule ensures that users cannot edit Billing Street field unless account is Type Cash</description>
    <errorConditionFormula>AND(OR(
ISCHANGED( BillingStreet ),
ISCHANGED( BillingCity),
ISCHANGED( BillingState ),
ISCHANGED( BillingPostalCode ),
ISCHANGED( BillingCountry )
),
NOT(ISPICKVAL(Type , &quot;Cash&quot;) ),
Contains($RecordType.Name, &quot;Customer&quot;),
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name))
)</errorConditionFormula>
    <errorDisplayField>BillingStreet</errorDisplayField>
    <errorMessage>You can only update the Billing Address for Cash Customer Accounts. Please contact Credit to update the Account.</errorMessage>
</ValidationRule>