unpackaged/main/default/objects/Account/validationRules/Cannot_edit_BStreet_unless_cash_account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_BStreet_unless_cash_account</fullName>
    <active>true</active>
    <description>Validation rule ensures that users cannot edit Billing Street field unless account is Type Cash</description>
    <errorConditionFormula>AND(
NOT($RecordType.Name = &quot;Person Account&quot;),
NOT(ISCHANGED(Is_Lead_Converted__c)),
NOT(Is_Lead_Converted__c),
NOT(ISPICKVAL(Type , &quot;Cash&quot;) ),
ISCHANGED( BillingStreet ),
NOT($RecordType.Name = &quot;AU Prospect&quot;),
NOT($RecordType.Name = &quot;NZ Prospect&quot;),
NOT(
OR ($Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;CPQ Integration User&quot;,
$Profile.Name = &quot;Integrations User&quot;))
)</errorConditionFormula>
    <errorDisplayField>BillingStreet</errorDisplayField>
    <errorMessage>You cannot edit this field for this account type</errorMessage>
</ValidationRule>