unpackaged/main/default/objects/Account/validationRules/Cannot_edit_BusEMail_unless_cash_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_BusEMail_unless_cash_type</fullName>
    <active>true</active>
    <description>Validation rule ensures that users cannot edit Business Email Address field unless account is Type Cash</description>
    <errorConditionFormula>AND(
NOT($RecordType.Name = &quot;Person Account&quot;),
NOT(ISPICKVAL(Type , &quot;Cash&quot;)) ,
ISCHANGED( Business_Email_Address__c ),
Contains($RecordType.Name, &quot;Customer&quot;),
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name))
)</errorConditionFormula>
    <errorDisplayField>Business_Email_Address__c</errorDisplayField>
    <errorMessage>You can only update the Business Email Address for Cash Customer Accounts. Please contact Credit to update the Account.</errorMessage>
</ValidationRule>