unpackaged/main/default/objects/Account/validationRules/Cannot_edit_Phone_unless_cash_account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_Phone_unless_cash_account</fullName>
    <active>true</active>
    <description>Validation rule ensures that users cannot edit Phone field unless account is Type Cash</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Type , &quot;Cash&quot;)) ,
ISCHANGED(Phone),
Contains($RecordType.Name, &quot;Customer&quot;),
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>You can only edit the Phone number on Cash Customer Accounts. Please contact Credit to update the Account.</errorMessage>
</ValidationRule>