unpackaged/main/default/objects/Account/validationRules/Validation_on_Account_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Account_Name</fullName>
    <active>true</active>
    <description>This rule ensures that only System Admin and Integrations Users are able to edit the Account Name.</description>
    <errorConditionFormula>AND(ISCHANGED(  Name ),
NOT($RecordType.Name = &quot;Person Account&quot;),
NOT($RecordType.Name = &quot;AU Prospect&quot;),
NOT($RecordType.Name = &quot;NZ Prospect&quot;),
NOT($RecordType.Name = &quot;NZ Supplier&quot;),
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name))
)</errorConditionFormula>
    <errorDisplayField>ABN__c</errorDisplayField>
    <errorMessage>You cannot update the Name of a Customer Account. Please contact the Credit team.</errorMessage>
</ValidationRule>