unpackaged/main/default/objects/Account/validationRules/Validation_on_RecordType.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_RecordType</fullName>
    <active>true</active>
    <description>This rule ensures that only System Admin and Integrations Users are able to edit the Account Record Type.</description>
    <errorConditionFormula>AND(
ISCHANGED( RecordTypeId ),
NOT($RecordType.Name = &quot;Person Account&quot;),
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name))
)</errorConditionFormula>
    <errorMessage>You cannot update the Record Type of an Account.</errorMessage>
</ValidationRule>