unpackaged/main/default/objects/Account/listViews/All_Prospects.listView-meta.xml
<ListView>
    <fullName>All_Prospects</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ABN__c</columns>
    <columns>GST_Number__c</columns>
    <columns>Secondary_Segment__c</columns>
    <columns>Home_Store__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Account_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.AU_Prospect,Account.NZ_Prospect</value>
    </filters>
    <filters>
        <field>Account_Status__c</field>
        <operation>notEqual</operation>
        <value>Inactive,Terminated</value>
    </filters>
    <label>All Prospects</label>
</ListView>