unpackaged/main/default/objects/Account/listViews/All_Terminated_Inactive_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Terminated_Inactive_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Power_Pass_Account_Number__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Credit_Limit__c</columns>
    <columns>Account_Status__c</columns>
    <columns>Pending__c</columns>
    <columns>Spend_Band__c</columns>
    <columns>R12_Sales__c</columns>
    <columns>Assigned_Store__c</columns>
    <columns>Account_State__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Account_Owner__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Receive_Marketing__c</columns>
    <columns>Receive_Marketing__pc</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Status__c</field>
        <operation>equals</operation>
        <value>Inactive,Terminated</value>
    </filters>
    <label>All Terminated/Inactive Accounts</label>
</ListView>